# PreviewAll

./: .gitignore  CMakeLists.txt  CMakePresets.json
KeyWidgets/: CMakeLists.txt
KeyWidgets/include/: keycardwidget.h  keyslideswitch.h
KeyWidgets/src/: keycardwidget.cpp  keyslideswitch.cpp
KeyZip/: CMakeLists.txt  archiveextractcallback.cpp  archiveextractcallback.h  archiveextractor.cpp  archiveextractor.h  archiveopencallback.cpp  archiveopencallback.h  archiveparser.cpp  archiveparser.h  archivetree.cpp  archivetree.h  archivetreewidget.cpp  archivetreewidget.h  archivetreewidgetitem.cpp  archivetreewidgetitem.h  commonhelper.cpp  commonhelper.h  guiddef.cpp  instreamwrapper.cpp  instreamwrapper.h  keyzipwindow.cpp  keyzipwindow.h  main.cpp  outstreamwrapper.cpp  outstreamwrapper.h  resource.qrc
PreviewAll/: CMakeLists.txt  main.cpp  previewallapplication.cpp  previewallapplication.h  previewallmenu.cpp  previewallmenu.h  previewallregister.cpp  previewallregister.h  previewoptionpanel.cpp  previewoptionpanel.h
PreviewAll/previewarchive/: archiveopencallback.cpp  archiveparser.cpp  archiveparser.h  archivepreviewwidget.cpp  archivepreviewwidget.h  archivetree.cpp  archivetree.h  archivetreewidget.cpp  archivetreewidget.h  archivetreewidgetitem.h  guiddef.cpp
PreviewAll/previewcode/: codepreviewwidget.cpp
PreviewAll/previewimage/: imageviewerwidget.cpp  imageviewerwidget.h  imageviewstatusbar.cpp
PreviewAll/resources/: resource.qrc
PreviewAll/translations/: previewall_zh_CN.ts
PreviewAll/translations/qm/: previewall_zh_CN.qm
PreviewAllHandler/: CMakeLists.txt  dllmain.cpp  export.def  previewallhandler.cpp  previewallhandler.h  previewallrequester.cpp  previewallrequester.h
PreviewAllServer/: CMakeLists.txt  main.cpp  previewallapplication.cpp  previewallapplication.h  previewallregister.cpp  previewallregister.h  previewoptionpanel.cpp  previewoptionpanel.h
PreviewAllServer/previewarchive/: archiveopencallback.h  archivepreviewwidget.cpp  archivepreviewwidget.h  archivetreewidgetitem.cpp  instreamwrapper.h
PreviewAllServer/previewcode/: codepreviewwidget.h
PreviewAllServer/previewimage/: imageviewportwidget.cpp  imageviewportwidget.h  imageviewstatusbar.cpp  imageviewstatusbar.h
PreviewAllServer/resources/: resource.qrc
PreviewAllServer/translations/: previewall_en_US.ts
PreviewAllServer/translations/qm/: previewall_en_US.qm
PreviewApp/: CMakeLists.txt  main.cpp  previewapppanel.cpp  previewapppanel.h
PreviewRegister/: CMakeLists.txt  animatedswitch.cpp  animatedswitch.h  helloworld.cpp  main.cpp  registermainpanel.cpp  registermainpanel.h
PreviewServer/: CMakeLists.txt  main.cpp
